# hellobellohellobello

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  ARCHITECTURE_VALIDATION.md  BACKUP_STRATEGY.md  BUILD_SYSTEM.md  CHANGELOG.md  Chapter5_Evaluation_and_Testing.md  FOLDER_STRUCTURE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MISSING_FEATURES_ANALYSIS.md  PHASE1_SUMMARY.md  PHASE3_IMPLEMENTATION.md  PROTOCOL.md  README.md  REPOSITORY_VALIDATION_README.md  TESTING_PIPELINE.md  TEST_PLAN.md  VISUALIZATION_TRACKING_TABLE.md  android_ux_demo.py  asd.md  build.gradle.kts  demo_improvements.py  enhanced_features_demo.py  gemini_prompts.md  gradle.properties  gradlew.bat  guidelines.md  pyproject.toml  pytest.ini  settings.gradle.kts
.github/: copilot-instruction.md  copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  copilot.yml
.junie/: guidelines.md
.pytest_tmp/: test_config_loader_missing_filcurrent  test_config_loader_reads_env_pcurrent  test_create_start_stop_sessioncurrent  test_find_checkerboard_cornerscurrent  test_fr1_simulation_mode_genercurrent  test_fr4_session_management_encurrent  test_save_load_roundtripcurrent  test_single_active_enforcedcurrent
.pytest_tmp/test_config_loader_reads_env_p0/: cfg.json
.pytest_tmp/test_save_load_roundtrip0/: calibration.json
android_sensor_node/: SHIMMER_LOGGING_MODE_GUIDE.md  SHIMMER_USAGE_EXAMPLES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android_sensor_node/app/: build.gradle.kts
demos/: android_ui_feedback_demo.py  android_ux_demo.py  demo_improvements.py  enhanced_features_demo.py  gui_visualization.py
docs/: 1_high_level_design.md  4_1_phase.md  4_3_phase.md  4_4_phase.md  4_5_phase.md  4_6_phase.md  API_Documentation.md  Comprehensive_Testing_Guide.md  Developer_Guide.md  Documentation_Index.md  ENHANCED_VISUALIZATION_SUMMARY.md  Flash_Sync_Validation.md  GRADLE_BUILD_ANALYSIS.md  Hardware_Validation_Protocol.md  Heartbeat_API_Documentation.md  Implementation_Phases.md  Production_Deployment_Guide.md  ProjectGuidelines_2024-25.md  Project_Management.md  REPOSITORY_VALIDATION_GUIDE.md  System_Design.md  System_Validation_Report.md  TEST_PLAN.md  TLS_API_Documentation.md  TOPDON_SDK_INTEGRATION_ANALYSIS.md  TRUE_TOPDON_SDK_INTEGRATION.md  Troubleshooting_Guide.md  User_Manual.md  guide_integration_testing.md  guidelines.md
docs/ai_guidelines/: GEMINI.md  gemini_plan.md
docs/diagrams/: IMPLEMENTATION_SUMMARY.md  PLACEMENT_GUIDE.md  README.md
docs/evidence/: chapter5_evidence_index.md
docs/images/: README.md
docs/latex/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  appendix_A.tex  appendix_C.tex  appendix_D.tex  appendix_E.tex  appendix_F.tex  appendix_H.tex  appendix_I.tex  appendix_Z.tex  main.tex  references.bib
docs/markdown/: 1_high_level_design.md  2_detail_design.md  3_phase_by_phase.md  4_1_phase.md  4_2_phase.md  4_3_phase.md  4_4_phase.md  4_5_phase.md  4_6_phase.md  Architecture.md  Backlog.md  Build.md  Data.md  Developer_Guide.md  Flows.md  Hardware_Validation_Protocol.md  NonFunctional.md  Security.md  System_Validation_Report.md  Testing.md  User_Manual.md  guide_running_tests_with_hardware.md  guide_system_testing.md  guide_unit_testing.md  revised1-3.md
docs/project_management/: Chapter5_Evaluation_and_Testing.md  IMPLEMENTATION_SUMMARY.md
documentation/: API_Documentation.md  BACKUP_STRATEGY.md  ENHANCED_VISUALIZATION_SUMMARY.md  Implementation_Phases.md  Production_Deployment_Guide.md  System_Design.md  TEST_PLAN.md  TOPDON_SDK_INTEGRATION_ANALYSIS.md  Troubleshooting_Guide.md
documentation/architecture/: PROTOCOL.md  SHIMMER_CAPI_INTEGRATION.md
documentation/development/: CHANGELOG.md  LINTING.md
documentation/diagrams/: IMPLEMENTATION_SUMMARY.md  MERMAID_VALIDATION_REPORT.md  PLACEMENT_GUIDE.md
documentation/latex/: 1.tex  4.tex  5.tex  6.tex  appendix_A.tex  appendix_B.tex  appendix_G.tex  appendix_Z.tex  main.tex
documentation/markdown/: Build.md  Flash_Sync_Validation.md  NonFunctional.md  System_Test_Checklist.md  User_Manual.md  cs_project_marking_form_MEng_1819.md
documentation/phases/: PHASE1_COMPLETION.md  PHASE2_COMPLETE_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md
gradle/wrapper/: gradle-wrapper.properties
hellobellohellobello.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pc_controller/: build.gradle.kts  config.json  requirements.txt
pc_controller/native_backend/: CMakeLists.txt  README.md  __init__.py  native_backend.cpp
pc_controller/native_backend/shimmer_c_api/: README.md
pc_controller/native_backend/shimmer_c_api/include/: Shimmer.h  ShimmerBluetooth.h  ShimmerSerial.h
pc_controller/native_backend/shimmer_c_api/lib/: shimmer_stub.cpp
pc_controller/src/: config.py  main.py
pc_controller/tests/: conftest.py  test_auth_manager.py  test_camera_calibration.py  test_config_loader.py  test_data_aggregator.py  test_data_loader.py  test_device_manager.py  test_gui_enhancements.py  test_gui_manager_ui_smoke.py  test_hdf5_exporter.py  test_heartbeat_manager.py  (+23 more)
scripts/: analyze_pilot_data.py  backup_script.py  build_production.sh  code_quality.py  generate_chapter5_visualizations.py  generate_final_missing_visualizations.py  generate_mermaid_visualizations.py  generate_missing_visualizations.py  generate_sample_visualizations.py  run_all_tests.ps1  run_performance_test.py  setup_dev.py  test_pipeline.py  validate_configs.py  validate_issue_27_completion.py  validate_sync.py  verify_data_integrity.py
tests/: test_pytest_bridge.py
tools/: analyze_pilot_data.py  code_quality.py  generate_chapter5_visualizations.py  generate_complete_visualization_suite.py  generate_comprehensive_mermaid_charts.py  generate_final_missing_visualizations.py  generate_mermaid_visualizations.py  generate_missing_visualization_elements.py  generate_missing_visualizations.py  generate_sample_visualizations.py  run_performance_test.py  setup_dev.py  test_pipeline.py  validate_configs.py  validate_issue_27_completion.py  validate_mermaid_charts.py  validate_sync.py  verify_data_integrity.py
(+451 files in other folders)
