[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hellobellohellobello"
version = "0.1.0"
description = "Multi-Modal Sensor Platform for Advanced Research Data Collection"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.8.0",
    "pyqtgraph>=0.13.7",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "zeroconf>=0.132.0",
    "pybind11>=2.13.0",
    "pandas>=2.2.0",
    "h5py>=3.11.0",
    "pyinstaller>=6.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.12.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "pytest-cov>=5.0.0",
    "pytest-xvfb>=3.0.0",
    "pytest-xdist>=3.5.0",
]
build = [
    "pyinstaller>=6.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pc_controller*"]
exclude = ["tests*", "android_sensor_node*", "build*", "dist*"]

[tool.ruff]
# Target Python version consistent with project requirements
target-version = "py311"
line-length = 100
# Performance optimization: cache linting results
cache-dir = ".ruff_cache"
exclude = [
  ".pytest_tmp",
  ".venv",
  "build",
  "dist",
  "android_sensor_node",
  "pc_controller/native_backend",
  "docs",
]
# Performance: Enable parallel processing
respect-gitignore = true

[tool.ruff.lint]
# Enable comprehensive rule sets for better code quality:
# - E/F/W (pycodestyle/pyflakes), I (isort), B (flake8-bugbear), UP (pyupgrade)
# - PERF (performance optimizations), RUF (Ruff-specific rules)
select = ["E", "F", "W", "I", "B", "UP", "PERF", "RUF"]
ignore = [
  # Allow module-level prints in tools/scripts
  "T201",
]
# Performance optimizations
unfixable = ["B"]  # Don't auto-fix bugbear issues that need manual review

[tool.ruff.lint.isort]
known-first-party = ["pc_controller"]

[tool.mypy]
python_version = "3.11"
# Check only our Python controller package by default
packages = ["pc_controller"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
no_implicit_optional = true
follow_imports = "silent"
show_error_codes = true
# Performance optimizations
cache_dir = ".mypy_cache"
incremental = true
exclude = [
  "android_sensor_node",
  "pc_controller/native_backend",
  "docs",
  "tests?",
  ".pytest_tmp",
]

# Pytest performance optimizations
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["pc_controller/tests", "tests"]
python_files = ["test_*.py", "*_test.py", "test*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Performance: run tests in parallel using pytest-xdist
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pc_controller",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=70",
    "-n", "auto",  # Use all available CPUs for parallel testing
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "unit: marks tests as unit tests",
]
# Cache test results for faster re-runs
cache_dir = ".pytest_cache"
# Performance: disable plugins we don't need
disable_plugins = ["cacheprovider"]
